[tool.poetry]
name = "tracerouter"
version = "0.1.0"
description = ""
authors = ["Vladyslav Barbanyagra <mrcontego@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
regex = "^2021.3.17"
requests = "^2.25.1"
ConfigArgParse = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
